--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 23 08:56:40 CET 2023
-sdk.dir=C\:\\Users\\rambo\\AppData\\Local\\Android\\Sdk
+#Thu Feb 23 09:42:40 CET 2023
+sdk.dir=C\:\\Users\\jonas\\AppData\\Local\\Android\\Sdk
